# toska-mesh-cs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO.md  Directory.Build.props  Directory.Packages.props  LICENSE  NOTICE  README.md  SECURITY.md  ToksaMesh.sln  ToskaMesh.sln  docker-compose.yml  run-discovery.sh  run-gateway.sh
.claude/: settings.local.json
tools/cli/: .gitignore  Makefile  README.md  pyproject.toml
tools/cli/scripts/: install-local.sh
tools/cli/src/toska_mesh_cli/: __init__.py  cli.py  cluster.py  deploy.py  info.py  progress.py  scaffold.py
tools/cli/src/toska_mesh_cli/templates/stateful-consul/: Dockerfile.api  Dockerfile.silo  README.md  toska.yaml
tools/cli/src/toska_mesh_cli/templates/stateful-consul/api/: TodoMeshApi.csproj  appsettings.json
tools/cli/src/toska_mesh_cli/templates/stateful-consul/contracts/: TodoContracts.cs
tools/cli/src/toska_mesh_cli/templates/stateful-consul/k8s/todo-mesh-api/: configmap.yaml  deployment.yaml  service.yaml
tools/cli/src/toska_mesh_cli/templates/stateful-consul/silo/: Program.cs  TodoMeshSilo.csproj  appsettings.json
tools/cli/src/toska_mesh_cli/templates/stateful-local/: Dockerfile.api  Dockerfile.silo  README.md  toska.yaml
tools/cli/src/toska_mesh_cli/templates/stateful-local/api/: RedisGrainApi.csproj
tools/cli/src/toska_mesh_cli/templates/stateful-local/silo/: RedisGrainSilo.csproj
tools/cli/src/toska_mesh_cli/templates/stateless-base/: Dockerfile  README.md  appsettings.json  toska.yaml
tools/cli/src/toska_mesh_cli/templates/stateless-host/: Dockerfile  Program.cs  README.md  toska.yaml
tools/cli/tests/: test_cli_smoke.py  test_cluster.py  test_deploy.py  test_init.py  test_services.py
(+462 files in other folders)
