[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toska-mesh-cli"
version = "0.1.0"
description = "Python CLI placeholder for the Toska Mesh workspace."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Toska Mesh Team" }]
dependencies = [
  "PyYAML>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3",
  "ruff>=0.3",
  "mypy>=1.9",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toska_mesh_cli = ["templates/**"]

[project.scripts]
toska = "toska_mesh_cli.__main__:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
